...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <state key="normal" title="Next">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xdm-XV-9Id">
                                <rect key="frame" x="20" y="434" width="84" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <color key="barTintColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <items>
                                    <navigationItem title="Anwhere Fitness" id="uxd-qE-2L1">
                                        <barButtonItem key="leftBarButtonItem" title="Back" image="arrow.left" catalog="system" id="9gr-06-sNr">
                                            <connections>
                                                <action selector="backButton:" destination="HeZ-a9-Esn" id="ba3-av-xz9"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="134.5"/>
                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="anywhereLanding"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="56"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                                <rect key="frame" x="0.0" y="0.0" width="150" height="52"/>
                                                                <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="clients"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                                                <state key="normal" title="For Clients">
                                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                </state>
...
                                                                <rect key="frame" x="170" y="0.0" width="150" height="52"/>
                                                                <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="instructors"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                                                <state key="normal" title="For Instructors">
                                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                </state>
...
