...
        }
    }

    func presentAlert(title: String, message: String, success: Bool) {
        let alertController = UIAlertController(title: title,
                                                message: message, preferredStyle: .alert)
        let alertActionFailure = UIAlertAction(title: "OK", style: .default, handler: nil)
        let alertActionSuccess = UIAlertAction(title: "OK", style: .default) { _ in
            if self.loginType == LoginType.signIn {
                self.performSegue(withIdentifier: (self.role == Role.client) ? "ClientSegue" : "InstructorSegue",
                sender: self)
            } else {
                self.dismiss(animated: true, completion: nil)
...
