...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Anywhere Fitness" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oh6-zb-ZNx">
                                        <rect key="frame" x="20" y="50" width="374" height="58.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="anywhereFitnessC"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="49"/>
                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <rect key="frame" x="20" y="753" width="374" height="40"/>
                                <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="searchButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="7q9-ZO-fNx"/>
                                </constraints>
                                <state key="normal" title="Search">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type in location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vcz-rx-dgG">
                                        <rect key="frame" x="0.0" y="26.5" width="374" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="locationSearch"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
...
                                        <rect key="frame" x="20" y="665" width="374" height="40"/>
                                        <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="viewSchedule"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="qV7-ce-IPU"/>
...
                                        <rect key="frame" x="20" y="665" width="374" height="40"/>
                                        <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="reserve"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="y8R-Rc-Lyc"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Boxing in an abandoned ring with Chris" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iwg-fZ-OgZ"
                                        <rect key="frame" x="20" y="20" width="374" height="179.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="className"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                        <nil key="textColor"/>
...
