...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Anywhere Fitness" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4rQ-eg-UJn">
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="134.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="anywhereFitnessI"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="56"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create Class" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HoF-uh-ead">
                                <rect key="frame" x="20" y="108" width="374" height="80"/>
                                <constraints>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type Number Here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XDe-CQ-F2S">
                                        <rect key="frame" x="0.0" y="20.5" width="374" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="classSize"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type Number Here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ALf-G2-uj4">
                                        <rect key="frame" x="0.0" y="20.5" width="374" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="classLength"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
...
                                <rect key="frame" x="20" y="753" width="374" height="40"/>
                                <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="createNext1"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="29U-I3-wch"/>
                                </constraints>
                                <state key="normal" title="Next">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type Class Name Here:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fn6-cQ-NtJ">
                                        <rect key="frame" x="0.0" y="20.5" width="374" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="className"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
...
                                <rect key="frame" x="20" y="753" width="374" height="40"/>
                                <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="createNext2"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="BXB-UU-fQh"/>
...
                                        <rect key="frame" x="0.0" y="20.5" width="374" height="179.5"/>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="classDescription"/>
                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <rect key="frame" x="20" y="753" width="374" height="40"/>
                                <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="createNext3"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="wGA-QQ-pSB"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type Number Here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BOK-bY-iy7">
                                        <rect key="frame" x="0.0" y="20.5" width="374" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="classCost"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
...
                                        <rect key="frame" x="0.0" y="20.5" width="374" height="79.5"/>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="equipment"/>
                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nrf-vY-G9I">
