...
import Foundation
// swiftlint:disable line_length
let jsonData = """
[
  {
    "id": 1,
    "name": "Introduction to Yoga with Adrienne",
    "time": "2020-11-7 9AM",
    "duration": 1.5,
    "intensity": "Beginner",
    "location": "New Jersey",
    "maxSize": 16,
    "classType": 0,
...
    "cost": 23.56,
    "courseDescription": "Intense yoga session",
    "address": "706 Hart Dr. Pompton Lakes, NJ 07442",
    "startDate": "01-01-2020",
    "instructor": 1,
    "days": [
      "Monday",
      "Wednesday",
      "Friday"
    ]
  },
{
    "id": 2,
...
